[project]
name = "unit-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "nish",email = "nishchup489@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-multipart (>=0.0.22,<0.0.23)",
    "fastapi (>=0.135.1,<0.136.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]

[tool.poetry]
packages = [{include = "unit_converter", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
